# mini-carbon

./: README.md  cli.py  input_example.txt  pyproject.toml
.github/workflows/: formatting.yaml
